--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,35 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  background-color: hsl(0, 0%, 94%);
+  font-size: 12px;
+}
+
+h1 {
+  margin: auto;
+  width: 50%;
+}
+
 .App {
   font-family: sans-serif;
 }
 
 .ProseMirrorContainer {
-  padding: 16px;
-  border: 1px solid #ccc;
+  margin: 4em;
+  padding: 2em;
   transition: 0.1s;
-  border-radius: 5px;
-  background-color: #fff;
+  background-color: hsl(0, 0%, 98%);
 }
 
 .ProseMirrorContainer:focus-within {
-  box-shadow: 0 0 0 3px #a6c3ff;
-  border-color: blue;
+  border-color: none;
 }
 
 .ProseMirror {
